# django-rag

./: README.md  app.py  injest.ipynb  pyproject.toml
